[package]
name = "reconx"
version = "0.1.0"
edition = "2021"
authors = ["Reconx Contributors"]
description = "Fast, passive-only OSINT reconnaissance tool for subdomain enumeration and domain intelligence gathering"
license = "MIT"
repository = "https://github.com/reconx/reconx"
keywords = ["osint", "reconnaissance", "subdomain", "security", "pentesting"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
csv = "1"
indicatif = { version = "0.17", features = ["tokio"] }
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.8"
hickory-resolver = "0.24"
url = "2"
regex = "1"
rust-embed = "8"
async-trait = "0.1"
futures = "0.3"
dirs = "5"
urlencoding = "2"
rand = "0.8"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
